--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.65rem;
+  padding: 0 0.2rem;
   margin: 2rem 0 3rem;
 }
 
